# civic-pulse

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: production.yaml  staging.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: deploy.sh  seed.sh
src/: __init__.py  config.py  main.py
src/api/: auth.py  routes.py  schemas.py
src/core/: cache.py  classifier.py  engine.py  metrics.py  queue.py
src/db/: database.py  seeds.py
src/db/migrations/: env.py
src/models/: request.py  service.py  user.py
src/services/: analytics.py  citizen.py  notification.py  workflow.py
src/utils/: helpers.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py
